# oop_labs

./: CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt
lab1/src/: sad.cpp
lab2/: CMakeLists.txt  seven.cpp  seven.h  test.cpp
lab3/: main.cpp  main.h  test.cpp
lab4/: main.cpp  main.h  test.cpp
lab5/: main.cpp
lab5/src/: allocator.h  iterator.h  node.h  stack.h
lab5/test/: test.cpp
lab6/: main.cpp
lab6/include/: board.h  dragon.h  elf.h  npc.h  observer.h  visitor.h
lab6/src/: board.cpp  dragon.cpp  elf.cpp  knight.cpp  npc.cpp  observer.cpp
lab7/: main.cpp
lab7/include/: board.h  concrete_visitor.h  knight.h  npc.h
lab7/src/: board.cpp  dragon.cpp  elf.cpp  knight.cpp  npc.cpp  visitor.cpp
lab7/test/: test.cpp
lib/: sad.h
src/: sad.cpp
test/: test.cpp
